# merr

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp  main2.cpp
cmake/: conan.cmake
include/: common.hpp  lab1.hpp  lab2.hpp  lab3.hpp  lab4.hpp
